Hopefully fix colour contrast?

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -87,9 +87,9 @@ main {
     margin: 10px;
     width: 80%;
     height: 60px;
-    background-color: #4CAF50;
+    background-color: #a0e9ac;
     border: none;
-    color: white;
+    color: rgb(0, 0, 0);
     text-align: center;
     text-decoration: none;
     display: inline-block;
